src/component/loading_list/tests/snapshots/envision__component__loading_list__tests__view__view_disabled.snap
---
source: src/component/loading_list/tests/view.rs
assertion_line: 196
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│    Item One                                              │
│▸   Item Two                                              │
│    Item Three                                            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
