src/component/loading_list/tests/snapshots/envision__component__loading_list__tests__view__view_empty.snap
---
source: src/component/loading_list/tests/view.rs
assertion_line: 17
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
