src/component/loading_list/tests/snapshots/envision__component__loading_list__tests__view__view_with_error.snap
---
source: src/component/loading_list/tests/view.rs
assertion_line: 61
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────────────────────────┐
│  ✗ Item One - Error: Connection failed                   │
│    Item Two                                              │
│    Item Three                                            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
