src/component/loading_list/tests/snapshots/envision__component__loading_list__tests__view__view_with_title.snap
---
source: src/component/loading_list/tests/view.rs
assertion_line: 46
expression: terminal.backend().to_string()
---
┌My Items──────────────────────────────────────────────────┐
│    Item One                                              │
│    Item Two                                              │
│    Item Three                                            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
