src/component/loading_list/tests/snapshots/envision__component__loading_list__tests__view__view_with_title_and_selection.snap
---
source: src/component/loading_list/tests/view.rs
assertion_line: 211
expression: terminal.backend().to_string()
---
┌Tasks─────────────────────────────────────────────────────┐
│    Item One                                              │
│    Item Two                                              │
│▸   Item Three                                            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
